--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -5,3 +5,19 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Minecraft-Regular";
+  src: url("../assets/fonts/Minecraft_Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Minecraft-Bold";
+  src: url("../assets/fonts/Minecraft_Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
