--- a/src/pages/Skills.css
+++ b/src/pages/Skills.css
@@ -32,9 +32,28 @@
   margin-top: 25px;
 }
 
+.rb-sidebar-right {
+  margin-top: 25px;
+}
+
+.rb-sidebar-right .rb-side-slot {
+  border-radius: 0px 10px 10px 0px;
+  border-left: 3px solid #000000;
+  border-right: 4px solid #FFFFFF;
+}
+
+.rb-sidebar-right .rb-side-slot:hover,
+.rb-sidebar-right .rb-side-slot.active {
+  margin-left: 0;
+  margin-right: -17px;
+  transform: translateX(-7px);
+  border-left: 6px solid #C6C6C6;
+  border-right: 4px solid #FFFFFF;
+}
+
 .rb-side-slot {
-  width: 90px;
-  height: 72px;
+  width: 112px;
+  height: 90px;
   background: #9a9a9a;
   border-top: 3px solid #FFFFFF;
   border-bottom: 3px solid #555555;
@@ -52,15 +71,15 @@
 }
 
 .tab-icon {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   object-fit: contain;
   filter: brightness(0.9);
   transition: filter 0.1s ease;
 }
 
 .tab-label {
-  font-size: 11px;
+  font-size: 13px;
   color: #000000;
   font-family: 'Minecraft-Regular', monospace;
   text-align: center;
@@ -74,17 +93,17 @@
 }
 
 .rb-side-slot:hover {
-  width: 100px;
-  margin-left: -14px;
-  transform: translateX(6px);
+  width: 125px;
+  margin-left: -17px;
+  transform: translateX(7px);
   border-right: 6px solid #C6C6C6;
   background-color: #C6C6C6;
 }
 
 .rb-side-slot.active {
-  width: 100px;
-  margin-left: -14px;
-  transform: translateX(6px);
+  width: 125px;
+  margin-left: -17px;
+  transform: translateX(7px);
   border-right: 6px solid #C6C6C6;
   background-color: #C6C6C6;
 }
@@ -210,39 +229,42 @@
 
 .ci-inventory-grid {
   display: grid;
-  grid-template-columns: repeat(9, 64px);
-  gap: 8px;
+  grid-template-columns: repeat(9, 80px);
+  grid-template-rows: 80px;
+  gap: 10px;
   margin-bottom: 20px;
 }
 
+/* COMMENTED OUT: Hotbar styles
 .ci-hotbar {
   display: grid;
   grid-template-columns: repeat(9, 64px);
   gap: 8px;
 }
+*/
 
 .ci-slot,
 .ci-slot-1,
 .ci-slot-2   {
-  width: 64px;
-  height: 64px;
+  width: 80px;
+  height: 80px;
   background: #8B8B8B;
   border: 4px solid;
   border-color: #343434 #ffffff #ffffff #343434;
 }
 
 .ci-slot-1 {
-  width: 64px;
-  height: 64px;
+  width: 80px;
+  height: 80px;
   border-radius: 10px;
   border: 4px solid black;
   background-color: #8892C9;
 }
 
 .ci-slot-2 {
-  width: 96px;
-  height: 96px;
-  border: 4px solid;
+  width: 120px;
+  height: 120px;
+  border: 5px solid;
   border-color: #303030 #FFFFFF #FFFFFF #303030;
 }
 
