--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -7,6 +7,7 @@
     overflow: hidden;
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(5px);
 }
 
 .projects-wrapper {
