--- a/src/pages/AboutMeInfo.css
+++ b/src/pages/AboutMeInfo.css
@@ -5,9 +5,12 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 10;
+    z-index: 20;
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 ::-webkit-scrollbar {
@@ -27,9 +30,6 @@
 .aboutme-content-wrapper {
   position: relative;
   z-index: 2;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   max-width: 1100px;
   width: 90%;
   display: flex;
