--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -5,16 +5,16 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 2;
+    z-index: 20;
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .projects-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
     display: inline-block;
     max-width: 90vw;
     max-height: 90vh;
